# magmerge

./: .gitignore  README.md  nb.ipynb  nb_dev.ipynb  pyproject.toml
scripts/: sra_fetch.sh
src/magmerge/: load_paths.py  merge_mag.py  pipelines.py  taxonomy.py
tests/: test_load_paths.py  test_merge_mag.py  test_pipelines.py  test_taxonomy.py
